# GuitarPedal

./: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  Makefile  arm-gcc-toolchain.cmake  blink.lds  boot.S  build.ninja  cmake_install.cmake  guitar_pedal.elf  guitar_pedal.map  pedal_l151.lds
Eagle/: pedal.l#1  pedal.lbr
Eagle/Guitar_pedal/: eagle.epf
docs/stm32f411re/: prototype_pinout.txt
include/: dma.h  gpio.h  i2s.h  interrupts.h  rcc.h  registers.h  usart.h  util.h
include/config/: config.h
include/config/f0r8/: registers_f0r8.h
include/config/f302/: registers_f302.h
include/config/f411/: registers_f411.h
include/config/l152/: registers_gpio_l152.h  registers_l152.h
src/: boot.S  boot_f0r8.S  boot_l152.S  gpio.c  i2s.c  i2s.h  interrupts.c  led.c  main.c  rcc.c  registers.h  usart.c  usart.h  util.c
src/config/f0r8/: pedal_f0r8.lds
src/config/f302/: boot_f302.S
src/config/f411/: boot_f411.s  pedal_f411.lds
src/config/l152/: boot_l152.S  pedal_l152.lds
